# age_tactics

./: .gitignore  README.md
analyzer/: README.md  pyproject.toml
analyzer/samples/: -AUTOSAVE-.aoe2spgame  -LASTAUTOSAVE-.aoe2spgame  GRECIA_PERSAS_CAMP.aoe2spgame  README.md  rec.aoe2record
analyzer/samples/multi/: -AUTOSAVE ON DISCONNECT (A1exSaurusRex)-.aoe2mpgame  -AUTOSAVE ON DISCONNECT (rakeru2006)-.aoe2mpgame  -AUTOSAVE ON DISCONNECT (red253)-.aoe2mpgame  -AUTOSAVE ON DISCONNECT (xXWizzyXx)-.aoe2mpgame  -AUTOSAVE ON DISCONNECT-.aoe2mpgame  FREZE.aoe2mpgame  MP Save - Out of Sync Save - 06baa4a1-fda3-457b-a7dd58bae5ced37d.aoe2mpgame  MP Save - Out of Sync Save - 126f995b-048c-4bae-ac5ec8793d13c0f9.aoe2mpgame  MP Save - Out of Sync Save - 53aa9265-e623-4ada-b62a6d104bd88c50.aoe2mpgame  MP Save - Out of Sync Save - 851db544-1681-4af1-a2531dacda7f8364.aoe2mpgame  MP Save - Out of Sync Save - 995fb5d7-2c93-4ffb-93f4e48abdb75efa.aoe2mpgame  MP Save - Out of Sync Save - d917b71f-8422-4859-a1575a6aedc845e6.aoe2mpgame  MP Save - Out of Sync Save - fb7cdbe5-424f-4b2c-8841950791a31d6e.aoe2mpgame
analyzer/src/aoe2_analyzer/: __init__.py  __main__.py  cli.py  gamedata.py  models.py  parser.py  report.py  resource.py  server.py  webreport.py
analyzer/tests/: test_parser.py
civs/aztecs/: README.md
civs/goths/: README.md
civs/goths/castle-drop/: README.md
civs/goths/fast-castle/: README.md
civs/goths/feudal-rush/: README.md
civs/huns/: README.md
civs/malay/: README.md
civs/mayans/: README.md
pro-builds/hera-macro-boom/: README.md
(+2 files in other folders)
